termino primera version cap 4. dudas marcadas con comentarios en rojo

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -35,7 +35,6 @@
 \usepackage{multicol}
 \renewcommand{\baselinestretch}{1.15}
 
-%\newcites{Intro}{Referencias hist\'{o}ricas}
 \newcommand{\gitcode}{\url{http://www.github.com/ValeBini/Tesina}}
 
 \begin{document}
@@ -64,6 +63,7 @@
 \part{Formalización de Mónadas Concurrentes: el Caso de la Mónada Delay}\label{part:mc}
 
 \include{tex/form} 
+\include{tex/casodelay}
 
 \bookmarksetup{startatroot}
 
