--- a/doc/tex/form.tex
+++ b/doc/tex/form.tex
@@ -33,13 +33,13 @@ La formalización de las mónadas está dada, al igual que la de los monoides, p
 
 Como se adelantó en la sección anterior, el primer campo de esta definición es una noción de igualdad. A diferencia de la que se pedía en \AgdaRecord{Monoid}, esta debe estar definida para elementos del conjunto \AgdaBound{M A}, para cualquier \AgdaBound{A}. De igual manera, la prueba de que esta relación es de equivalencia debe darse para un \AgdaBound{A} arbitrario. La arbitrariedad de \AgdaBound{A} se debe a que, como se puede ver en los siguientes campos, el funtor \AgdaBound{M} se aplica sobre diversos conjuntos y se necesita la igualdad definida para todos los conjuntos sobre los que \AgdaBound{M} se aplique. Esta necesidad se evidencia sobre todo al dar instancias de \AgdaRecord{Monad}.
 
-El tercer campo es la función \AgdaField{return} usual de las mónadas. Esta toma un elemento de algún conjunto \AgdaBound{A} arbitrario y lo encapsula en la mónada aplicando el funtor \AgdaBound{M}. El campo que sigue representa el operador \textit{bind} de mónadas que toma un elemento de \AgdaBound{M A} y una función que toma el resultado \AgdaBound{A} y genera un elemento de \AgdaBound{M B} y devuelve un \AgdaBound{M B}. Esta función usualmente representa la secuenciación de computaciones. 
+El tercer campo es la función \AgdaField{return} usual de las mónadas. Esta toma un elemento de algún conjunto \AgdaBound{A} arbitrario y lo encapsula en la mónada aplicando el funtor \AgdaBound{M}. En la definición formal de las mónadas (ambas versiones) esta función representa el morfismo $\eta : A \rightarrow \mathit{M} A$. El campo que sigue, \AgdaField{$\_\gg=\_$}, representa el operador \textit{bind} de mónadas que toma un elemento de \AgdaBound{M A} y una función que toma el resultado \AgdaBound{A} y genera un elemento de \AgdaBound{M B} y devuelve un \AgdaBound{M B}. Esta función representa la secuenciación de computaciones y está definida en el estilo de la definición de mónadas como sistemas de extensión. En la definición \ref{def:sistext} se define el operador $\_^*$ que toma una función de tipo $A \rightarrow \mathit{M} B$ y devuelve una funcióń de tipo $\mathit{M} A \rightarrow \mathit{M} B$. El tipo del operador es por tanto $\_^* : (A \rightarrow \mathit{M} B) \rightarrow \mathit{M} A \rightarrow \mathit{M} B$. Si se da vuelta el orden de sus argumentos se obtiene el tipo de la función \textit{bind}: \AgdaField{$\_\gg=\_$} \AgdaSymbol{:} \AgdaBound{M A} \AgdaSymbol{$\rightarrow$} \AgdaSymbol{(}\AgdaBound{A} \AgdaSymbol{$\rightarrow$} \AgdaBound{M B}\AgdaSymbol{) $\rightarrow$} \AgdaBound{M B}. 
 
-Los últimos tres campos representan las leyes de mónadas. Estos están dados por tipos que representan proposiciones. El primero de ellos, \AgdaField{law$_1$}, representa la primera ley de mónadas que dice que para cualquier elemento \AgdaBound{x} de un conjunto \AgdaBound{A} y cualquier función \AgdaBound{f} que dado un elemento de \AgdaBound{A} y genere una computación de tipo \AgdaBound{M B}, se debe cumplir que hacer el \textit{bind} de \AgdaField{return} \AgdaBound{x} con \AgdaBound{f} debe dar el mismo resultado que aplicar \AgdaBound{f} a \AgdaBound{x}. Cuando se da una instancia de \AgdaRecord{Monad} y se asigna al campo \AgdaField{law$_1$} un habitante de este tipo, se está demostrando que las expresiones asignadas a los campos \AgdaField{return} y \AgdaField{$\_\gg=\_$} cumplen con la primera ley de mónadas respecto de la igualdad provista por el primer campo del \AgdaKeyword{record}.
+Los últimos tres campos representan las leyes de mónadas. Estos están dados por tipos que representan proposiciones. El primero de ellos, \AgdaField{law$_1$}, representa la primera ley de mónadas que dice que para cualquier elemento \AgdaBound{x} de un conjunto \AgdaBound{A} y cualquier función \AgdaBound{f} que dado un elemento de \AgdaBound{A} y genere una computación de tipo \AgdaBound{M B}, se debe cumplir que hacer el \textit{bind} de \AgdaField{return} \AgdaBound{x} con \AgdaBound{f} debe dar el mismo resultado que aplicar \AgdaBound{f} a \AgdaBound{x}. Esta ley se corresponde con la siguiente ecuación de la definición formal: $f^* \circ \eta_A = f$. Cuando se da una instancia de \AgdaRecord{Monad} y se asigna al campo \AgdaField{law$_1$} un habitante de este tipo, se está demostrando que las expresiones asignadas a los campos \AgdaField{return} y \AgdaField{$\_\gg=\_$} cumplen con la primera ley de mónadas respecto de la igualdad provista por el primer campo del \AgdaKeyword{record}.
 
-De la misma manera, \AgdaField{law$_2$} representa la proposición que indica que se cumple la segunda ley de mónadas. Esta postula que dada una computación \AgdaBound{t} de tipo \AgdaBound{M A}, hacer \textit{bind} de \AgdaBound{t} con \AgdaField{return} es lo mismo que aplicar sólo \AgdaBound{t}. 
+De la misma manera, \AgdaField{law$_2$} representa la proposición que indica que se cumple la segunda ley de mónadas. Esta postula que dada una computación \AgdaBound{t} de tipo \AgdaBound{M A}, hacer \textit{bind} de \AgdaBound{t} con \AgdaField{return} es lo mismo que aplicar sólo \AgdaBound{t}. Esta segunda ley se corresponde con la ecuación que indica que $\eta_A^* = id_{M A}$. El término $\eta_A^*$ corresponde a la acción de aplicar a alguna computación \AgdaBound{t} el operador \textit{bind} seguido de \AgdaField{return}, mientras que del otro lado se tiene $id_{M A}$ que aplicado a alguna computación arbitraria \AgdaBound{t} da como resultado \AgdaBound{t}.
 
-Finalmente, el último campo, \AgdaField{law$_3$}, representa la asociatividad del operador \hbox{\AgdaField{$\_\gg=\_$}}. Esta denota que, dadas una computación \AgdaBound{t} de tipo \AgdaBound{M A} y dos funciones \AgdaBound{f} y \AgdaBound{g} que van de \AgdaBound{A} en \AgdaBound{M B} y de \AgdaBound{B} en \AgdaBound{M C} respectivamente, es lo mismo aplicar el \textit{bind} a \AgdaBound{t} con \AgdaBound{f} y luego al resultado obtenido aplicarle el \textit{bind} con \AgdaBound{g}, que aplicarlo a \AgdaBound{t} con la función que toma un \AgdaBound{x} de tipo \AgdaBound{A} y devuelve la aplicación de \AgdaBound{f x} \AgdaField{$\gg=$} \AgdaBound{g}.
+Finalmente, el último campo, \AgdaField{law$_3$}, representa la asociatividad del operador \hbox{\AgdaField{$\_\gg=\_$}}. Esta denota que, dadas una computación \AgdaBound{t} de tipo \AgdaBound{M A} y dos funciones \AgdaBound{f} y \AgdaBound{g} que van de \AgdaBound{A} en \hbox{\AgdaBound{M B}} y de \AgdaBound{B} en \AgdaBound{M C} respectivamente, es lo mismo aplicar el \textit{bind} a \AgdaBound{t} con \AgdaBound{f} y luego al resultado obtenido aplicarle el \textit{bind} con \AgdaBound{g}, que aplicarlo a \AgdaBound{t} con la función que toma un \AgdaBound{x} de tipo \AgdaBound{A} y devuelve la aplicación de \AgdaBound{f x} \AgdaField{$\gg=$} \AgdaBound{g}. Esta última ley se corresponde con la ecuación que indica que $g^* \circ f^* = (g^* \circ f)^*$. 
 
 \subsection{Formalización de Funtor Monoidal}\label{funtmon:funt}
 
@@ -51,7 +51,7 @@ Los primeros dos campos del \AgdaKeyword{record} son iguales a los de \AgdaRecor
 
 Los dos campos que siguen conforman la estructura monoidal que el funtor requiere para ser un funtor monoidal. La transformación natural $m : \mathit{M} A \times \mathit{M} B \rightarrow \mathit{M} (A \times B)$ está dada por el campo \AgdaField{merge}. A diferencia de como se describe en la definición formal (\ref{def:monoidalfuntor}), en este caso \AgdaField{merge} no toma un elemento de \AgdaBound{M A} $\times$ \AgdaBound{M B}, sino que toma ambos elementos por separado, es decir que se encuentra currificada. 
 
-El otro ingrediente que se necesita para dar la estructura monoidal del funtor es el morfismo $e : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. En la sección \ref{monadas:cartesian} se mencionó que en esta tesina se trabajaría siempre con la categoría \textbf{Set} considerando como objeto terminal el conjunto unitario $\mathbf{1} = \{\star\}$. Este conjunto tiene una representación propia en Agda y está dada por el tipo de dato \AgdaDatatype{$\top$} definido en el módulo \href{https://agda.github.io/agda-stdlib/Data.Unit.Base.html}{\AgdaModule{Data.Unit.Base}}. Este se define como un \AgdaKeyword{record} sin campos con un único constructor llamado \AgdaInductiveConstructor{tt}. En la formalización de funtor monoidal, en lugar de representar al morfistmo $e$ con una función de tipo \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$}, este se representa directamente como un habitante del tipo \AgdaBound{M} \AgdaDatatype{$\top$} llamado \AgdaField{unit}. Esto es porque sólo hay un habitante de tipo \AgdaDatatype{$\top$}, por lo que sólo habrá un habitante del tipo \AgdaBound{M} \AgdaDatatype{$\top$} y darlo como función sería redundante, ya que siempre habría que escribir \AgdaField{unit} \AgdaInductiveConstructor{tt}.
+El otro ingrediente que se necesita para dar la estructura monoidal del funtor es el morfismo $e : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. En la sección \ref{monadas:cartesian} se mencionó que en esta tesina se trabajaría siempre con la categoría \textbf{Set} considerando como objeto terminal el conjunto unitario $\mathbf{1} = \{\star\}$. Este conjunto tiene una representación propia en Agda y está dada por el tipo de dato \AgdaDatatype{$\top$} definido en el módulo \href{https://agda.github.io/agda-stdlib/Data.Unit.Base.html}{\AgdaModule{Data.Unit.Base}}. Este se define como un \AgdaKeyword{record} sin campos con un único constructor llamado \AgdaInductiveConstructor{tt}. En la formalización de funtor monoidal, en lugar de representar al morfistmo $e$ con una función de tipo \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$}, este se representa directamente como un habitante del tipo \AgdaBound{M} \AgdaDatatype{$\top$} llamado \AgdaField{unit}. Esto es porque sólo hay un habitante de tipo \AgdaDatatype{$\top$}, por lo que sólo habrá un habitante del tipo \AgdaBound{M} \AgdaDatatype{$\top$} y darlo como función sería redundante, ya que siempre habría que escribir \AgdaField{unit} \AgdaInductiveConstructor{tt} puesto que no habría otro posible argumento para la función.
 
 El siguiente campo de \AgdaRecord{MonoidalFunctor} es \AgdaField{fmap}. Como se describió en la definición \ref{def:funtor}, un funtor $\mathit{F}$ de $\mathscr{C}$ en $\mathscr{D}$ no sólo asigna un objeto de $\mathscr{D}$ a cada objeto de $\mathscr{C}$, sino que también asigna a cada morfismo $f : A \rightarrow B \in \text{\bf mor} \ \mathscr{C}$ un morfismo $\mathit{F}(f) : \mathit{F} A \rightarrow \mathit{F} B$. El parámetro \AgdaBound{M} sólo representa la asignación de objetos del funtor, asigna a cada objeto de \textbf{Set} otro objeto de \textbf{Set}. La asignación de morfismos no está definida. El rol de \AgdaField{fmap} es representar esta asignación, es decir que es un mapeo que, dada una función que va de \AgdaBound{A} en \AgdaBound{B}, devuelve otra función que va de \AgdaBound{M A} en \AgdaBound{M B}. Este campo es necesario para poder definir las ecuaciones que la estructura monoidal debe cumplir, las cuales están dadas en los últimos tres campos del \AgdaKeyword{record}.
 
@@ -125,13 +125,13 @@ Uniendo todas las partes traducidas y tomando la composición de funciones simpl
 
 En la definición formal hay una condición extra para los funtores monoidales que dice que si la estructura monoidal es además compatible con $\gamma$, la cual intercambia los elementos del producto cartesiano, entonces el funtor monoidal es simétrico. Si se piensa al funtor monoidal como un mecanismo para encapsular efectos de computaciones, entonces que el funtor sea simétrico significaría que el orden de los efectos no importa, es decir que los efectos conmutan. Esta condición extra se refleja en el campo final que se encuentra comentado, \AgdaField{comm}, el cual postula la conmutatividad del operador \AgdaField{merge}. Esta proposición indica que para cualesquiera computaciones \AgdaBound{a} y \AgdaBound{b} de tipo \AgdaBound{M A} y \AgdaBound{M B} respectivamente, la aplicación \AgdaField{merge} \AgdaBound{a b} da el mismo resultado que la aplicación \AgdaField{merge} \AgdaBound{b a} seguida de un \AgdaFunction{swap} que representa a la función $\gamma$. Agregando este último campo se obtiene entonces la formalización de los funtores monoidales simétricos.
 
-\section{Formalización de Monoide Concurrente}\label{form:monoidconc}
+\section{Formalización de Monoides Concurrentes}\label{form:monoidconc}
 
 Como paso previo a la formalización de las mónadas concurrentes, se presenta en esta sección la formalización de los monoides concurrentes. Estos son una mezcla entre los monoides y los funtores monoidales e introducen un ingrediente nuevo que luego estará presente también en la formalización de las mónadas concurrentes: la ley de intercambio. Esta formalización está dada también por un tipo \AgdaKeyword{record} parametrizado, donde el parámetro es, al igual que en el caso de los monoides, un conjunto. 
 
 \ExecuteMetaData[latex/Structures.tex]{monoidconc}
 
-En la definición \ref{def:bimonord} se presenta a un bimonoide ordenado como un conjunto parcialmente ordenado $(A,\sqsubseteq)$ junto con dos estructuras monoidales $(A,;,\mathtt{skip})$ y $(A,*,\mathtt{nothing})$ tales que $;$ y $*$ son compatibles con $\sqsubseteq$ y $*$ es conmutativa. Luego, en la definición \ref{def:monoidconc} se define a un monoide concurrente como un bimonoide ordenado tal que los neutros coinciden y se cumple la ley de intercambio.
+En la definición \ref{def:bimonord} se presenta a un bimonoide ordenado como un conjunto parcialmente ordenado $(A,\sqsubseteq)$ junto con dos estructuras monoidales $(A,;,\mathtt{skip})$ y $(A,*,\mathtt{nothing})$ tales que $;$ y $*$ son compatibles con $\sqsubseteq$ y $*$ es conmutativa {\color{red} La compatibilidad de los operadores con el orden y la conmutatividad de $*$ no están, debería agregarlos?}. Luego, en la definición \ref{def:monoidconc} se define a un monoide concurrente como un bimonoide ordenado tal que los neutros coinciden y se cumple la ley de intercambio.
 
 Al igual que en las demás estructuras, los primeros dos campos de \AgdaRecord{Concurrent Monoid} representan la noción de igualdad junto con la prueba de que esta es una relación de equivalencia. De manera similar, el tercer y cuarto campo introducen una relación de orden junto con una prueba de que esta es un preorden, es decir que es reflexiva, antisimétrica y transitiva. Esta relación se corresponde con el orden $\sqsubseteq$ del conjunto que se pide en la definición formal y es necesaria, sobre todo, debido a la presencia de la ley de intercambio, la cual está dada, a diferencia de las demás propiedades, como una desigualdad. Se requiere entonces que exista una relación de orden sobre el conjunto \AgdaBound{M} y esta debe ser un preorden respecto de la noción de igualdad previamente introducida. Esto significa que las propiedades de reflexividad, antisimetría y transitividad están demostradas respecto de \AgdaField{$\_\cong_m\_$}. La prueba \AgdaField{porder$_m$} de que la relación \AgdaField{$\_\lesssim_m\_$} es un preorden está dada por un habitante de \AgdaRecord{IsPreorder}, el cual es un tipo \AgdaKeyword{record} definido en el módulo \href{https://agda.github.io/agda-stdlib/Relation.Binary.Structures.html}{\AgdaModule{Relation.Binary.Structures}}.
 
@@ -139,4 +139,61 @@ Los siguientes dos campos, \AgdaField{$\_+_m\_$} y \AgdaField{zero$_m$}, represe
 
 A continuación se introduce otra operación binaria sobre el conjunto \AgdaBound{M}: \AgdaField{max$_m$}. Esta operación junto con \AgdaField{zero$_m$} constituyen la segunda estructura monoidal del conjunto. El neutro es el mismo en ambas estructuras debido a que es un monoide concurrente. Se puede pensar a \AgdaField{max$_m$} como una versión simplificada de la operación \AgdaField{merge} de los funtores monoidales. Los campos que siguen son pruebas de que la estructura (\AgdaField{max$_m$}, \AgdaField{zero$_m$}) es monoidal: \AgdaField{midl} y \AgdaField{midr} representan pruebas de que \AgdaField{zero$_m$} es neutro respecto de \AgdaField{max$_m$}, a izquierda y derecha respectivamente, y \AgdaField{massoc} representa la prueba de que dicha operación es asociativa. Se antepone la \AgdaField{m} delante para indicar que estas propiedades pertenecen a \AgdaField{max$_m$}. 
 
-El último campo de esta estructura es la ley de intercambio. %COMPLETAR
+El último campo de esta estructura es la ley de intercambio. {\color{red} Comentario: completar. No escribí esta parte porque la desigualdad está al revés que en la teoría y no se cómo justificar eso.}
+
+\section{Formalización de Mónadas Concurrentes}\label{form:monconc}
+
+Se introduce a continuación la formalización de las mónadas concurrentes. Esta estará dada, como en las estructuras algebraicas anteriores, por un tipo \AgdaKeyword{record} parametrizado. Como en el caso de la formalización de mónadas, el parámetro del \AgdaKeyword{record} \AgdaRecord{ConcurrentMonad} será una asignación \hbox{\AgdaBound{M} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaSymbol{$\rightarrow$} \AgdaPrimitiveType{Set}}, la cual representa la asignación de objetos a objetos de un funtor $\mathit{M} : \text{\bf Set} \rightarrow \text{\bf Set}$.
+
+\ExecuteMetaData[latex/Structures.tex]{monconc}
+
+Siguiendo el ejemplo de las mónadas, el primer campo de esta estructura es una noción de igualdad sobre el conjunto \AgdaBound{M A}, para un \AgdaBound{A} arbitrario. De igual manera, el segundo campo es la prueba de que la relación anterior es de equivalencia, y también debe darse para un \AgdaBound{A} arbitrario. Como se explicó anteriormente, es necesario que el conjunto \AgdaBound{A} pueda tomar diferentes valores ya que el funtor \AgdaBound{M} se aplicará a distintos conjuntos a lo largo de la estructura. Es por esta misma razón que los dos campos que siguen también deben definirse para cualquier conjunto \AgdaBound{A}. 
+
+En la definición \ref{def:monconc} se expone que para que una mónada sea concurrente debe ser primero una mónada monoidal ordenada. La definición \ref{def:monmonord}, por su lado,
+indica que para que una mónada sea una mónada monoidal ordenada debe contar con una estructura de funtor monoidal simétrico $(m,e)$ y una relación de orden compatible con la misma. {\color{red} Comentario: acá también se pide la compatibilidad de la estructura con el orden, debería agregarla?} Es así como, de manera similar a la formalización de monoides, el tercer campo intriduce una relación de orden entre elementos de \AgdaBound{M A}, para algún \AgdaBound{A} dado. A continuación, en el cuarto campo, se da la prueba de que dicha relación es un preorden, es decir que es reflexiva, antisimétrica y transitiva. Al igual que en los monoides, estas pruebas se dan en torno a la noción de igualdad definida previamente.
+
+Los campos siguientes introducen la estructura monádica. Estos están dados, al igual que en la formalización de mónada, siguiendo la definición de mónadas como sistemas de extensión (definición \ref{def:sistext}). La función \AgdaField{return} toma un elemento de un conjunto \AgdaBound{A} arbitrario y lo encapsula en la mónada, devolviendo un habitante del tipo \AgdaBound{M A}, mientras que el operador \AgdaField{$\gg=$} sirve para secuenciar dos computaciones. Los campos \AgdaField{monad$_1$}, \AgdaField{monad$_2$} y \AgdaField{monad$_3$} representan las tres leyes de mónadas y son iguales a los campos \AgdaField{law$_1$}, \AgdaField{law$_2$} y \AgdaField{law$_3$} de \AgdaRecord{Monad}. Los primeros dos indican que \AgdaField{return} es neutro a derecha e izquierda de \AgdaField{$\gg=$} y el último indica la asociatividad de dicho operador.
+
+Una vez establecida la estructura monádica, se pasa a introducir la estructura monoidal que se requiere en la definición \ref{def:monmonord} para que la mónada sea una mónada monoidal ordenada. El elemento neutro es un morfismo $e : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Como se mencionó anteriormente, el objeto terminal $\mathbf{1} = \{\star\} \in \text{\bf ob Set}$ se representa en Agda como el tipo \AgdaDatatype{$\top$}, cuyo único habitante es \AgdaInductiveConstructor{tt}. Al ser un conjunto de un único elemento, al igual que en el caso de la formalización de funtor monoidal, $e$ se define como un campo \AgdaField{unit} de tipo \AgdaBound{M} \AgdaDatatype{$\top$} en lugar de como una función de tipo \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$} ya que hay un único argumento posible para la función. Según la definición \ref{def:monconc}, para que la mónada sea una mónada concurrente, el morfismo $e$ debe ser igual a $\eta_{\mathbf{1}} : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Considerando $\mathbf{1} =$ \AgdaDatatype{$\top$}, luego $e$ debería ser igual a \AgdaField{return} \AgdaSymbol{\{}\AgdaDatatype{$\top$}\AgdaSymbol{\} :} \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$}. Como \AgdaDatatype{$\top$} tiene un único habitante, se puede obviar el argumento y \AgdaField{unit} debería ser igual a \AgdaField{return} \AgdaInductiveConstructor{tt} \AgdaSymbol{:} \AgdaBound{M} \AgdaDatatype{$\top$}. {\color{red} Comentario: no me queda claro cómo concluir que son iguales, el hecho de que \AgdaDatatype{$\top$} tenga un sólo habitante no indica que \AgdaBound{M} \AgdaDatatype{$\top$} necesariamente también tenga uno sólo, o si? Podría sacar \AgdaField{unit} y en su lugar en las leyes poner directamente \AgdaField{return} \AgdaInductiveConstructor{tt}?}
+
+Continuando con la estructura monoidal, el siguiente campo es la función \AgdaField{merge}, la cual representa la transformación natural $m$. Este campo está definido de igual manera que el \AgdaField{merge} de \AgdaRecord{MonoidalFunctor}. En dicha estructura, a continuación del \AgdaField{merge} se introduce el campo \AgdaField{fmap}, el cual representa la asignación de morfismos a morfismos del funtor $\mathit{M}$. En el caso de las mónadas concurrentes este campo no es necesario puesto que puede construirse tal asignación a partir del operador \AgdaField{$\gg=$}. Sea \AgdaBound{f} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{$\rightarrow$}  \AgdaBound{B} una función, luego (\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} $f$ \AgdaBound{a})) es una función de tipo \AgdaBound{M A} \AgdaSymbol{$\rightarrow$} \AgdaBound{M B}. De esta manera la asignación de morfismos a morfismos del funtor queda definida. {\color{red} Comentario: demostrar equivalencia?} 
+
+Es el turno ahora de las propiedades que deben cumplirse para que \AgdaField{merge} y \AgdaField{unit} formen una estructura monoidal. Estas propiedades son tres y están definidas de manera similar a las de la formalización de funtor monoidal, salvo por el uso del campo \AgdaField{fmap}. \AgdaField{idr} representa la proposición que indica que \AgdaField{unit} es un neutro a derecha del operador \AgdaField{merge}. En el \AgdaKeyword{record} \AgdaRecord{MonoidalFunctor} esta propiedad tiene tipo \hbox{\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$} (\AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a})}. Reemplazando \AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) por la función propuesta anteriormente, donde se sustituye $f$ por (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})), quedaría el siguiente tipo: 
+\begin{center}
+\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$}  \\ ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a})) \AgdaBound{a})
+\end{center}
+
+Si se reduce la aplicación (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a}, se obtiene un tipo un poco más reducido:
+\begin{center}
+\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$} ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt}))) \AgdaBound{a})
+\end{center}
+
+Si se reduce finalmente la aplicación (\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt}))) \AgdaBound{a}, se obtiene el tipo del campo \AgdaField{idr} en la estructura:
+\begin{center}
+\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$} (\AgdaBound{a} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})))
+\end{center}
+
+De manera análoga, si se reemplaza \AgdaField{fmap} por su versión construida con \textit{bind} en el tipo del campo \AgdaField{idl} de \AgdaRecord{MonoidalFunctor} y luego se reducen las aplicaciones, se obtiene el tipo del campo \AgdaField{idl} de \AgdaRecord{ConcurrentMonad}. Este representa la propiedad que postula que \AgdaField{unit} es neutro a izquierda del operador \AgdaField{merge}. 
+
+La última de estas tres propiedades, \AgdaField{assoc}, representa la asociatividad del operador \AgdaField{merge}. En la estructura de funtor monoidal esta ley estaba definida con el siguiente tipo:
+\begin{center}
+\AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ (\AgdaField{fmap} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) (\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c})) \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
+\end{center}
+
+Reemplazando \AgdaField{fmap} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) por la función equivalente a \AgdaField{fmap}, donde la $f$ sería sustituída por la función (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}), el tipo queda como sigue:
+\begin{center}
+\AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) \AgdaBound{a})) (\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c})) \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
+\end{center}
+
+La aplicación (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) \AgdaBound{a})) se puede reducir, pero para esto es necesario hacer \textit{pattern matching} en la variable \AgdaBound{a} de manera que se pueda acceder a sus componentes, ya que esta es un elemento de un producto cartesiano. El resultado de abrir la variable \AgdaBound{a} y luego reducir la aplicación es el tipo:
+\begin{center}
+\AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\})) (\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c})) \\ \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
+\end{center}
+
+Se puede reducir ahora el lado izquierdo de la ecuación, reemplazando la variable \AgdaBound{ma} por (\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c}). El resultado de hacer este reemplazo es el siguiente tipo, el cual es el tipo del campo \AgdaField{assoc} de \AgdaRecord{ConcurrentMonad}:
+\begin{center}
+\AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ ((\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c}) \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\})) \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
+\end{center}
+
+Queda por analizar el último campo de la estructura, el cual postula la relación que deben tener los operadores \AgdaField{$\gg=$} y \AgdaField{merge} para que la mónada sea concurrente. Este se denomina \AgdaField{ichange} y representa la ley de intercambio. {\color{red} Comentario: completar. Idem monoide concurrente no se cómo justificar que la desigualdad está invertida.}
+
