--- a/doc/tex/titlepage.tex
+++ b/doc/tex/titlepage.tex
@@ -65,7 +65,7 @@ Delay}} % Título
     %Imagen
     \begin{figure}[h] %El h es para que quede en el lugar
 	\centering
-	\includegraphics[width=0.4\linewidth]{img/UNR.png} \hfill \includegraphics[width=0.4\linewidth]{img/FCEIA.jpeg}
+	\includegraphics[width=0.4\linewidth]{img/FCEIA.jpeg} \hfill \includegraphics[width=0.4\linewidth]{img/UNR.png}
 	\end{figure}
     
     \vfill % Espacio
